# resume-parser-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  config.py  gpu.Dockerfile  helper.py  main.py  pyproject.toml  schema.py
ai/: resume_parser.py
api/: pdf.py
