[tool.poetry]
name = "resume-parser-backend"
version = "0.1.0"
description = ""
authors = ["Chuu Htet Naing <chuuhtetnaing@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python =  ">=3.9.0,<3.13"
fastapi = {extras = ["all"], version = "^0.104.0"}
fitz-utils = "^0.0.15"
opencv-python = "^4.8.1.78"
en-core-web-lg = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.7.0/en_core_web_lg-3.7.0-py3-none-any.whl"}
protobuf = "^4.24.4"


[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = {extras = ["d"], version = "^23.7.0"}
isort = "^5.12.0"
pre-commit = "^3.4.0"


[tool.poetry.group.gpu.dependencies]
torch = {version = "^2.1.0+cu121", source = "pytorch-gpu"}
torchvision = {version = "^0.16.0+cu121", source = "pytorch-gpu"}
torchaudio = {version = "^2.1.0+cu121", source = "pytorch-gpu"}
transformers = "^4.34.1"
spacy = {extras = ["cuda12x"], version = "^3.7.2"}
sentencepiece = "^0.1.99"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
